Recompile: paper_2026-03-01_1551.pdf

--- a/paper.tex
+++ b/paper.tex
@@ -504,8 +504,6 @@ In some cases, a very simple unified function can suffice over a complex utility
 \subsection{Action Space Representation}
 \label{action_space_representation}
 
-In RL, environments are modeled as a Markov Decision Process (MDP). An MDP is defined by $(\mathcal{S}, \mathcal{A}, P, R)$, where $\mathcal{S}$ is the state space, $\mathcal{A}$ is the action space, $P(\cdot\mid s,a)$ is the transition probability distribution, and $R(s,a)$ is the reward function. At each timestep $t$, the agent observes a state $s_t \in \mathcal{S}$ and selects an action $a_t \in \mathcal{A}$. Both action and state sets may be finite, infinite, discrete, or continuous.
-
 % What is an action 
 In RL, an \textbf{action} $a \in \mathcal{A}$ refers to a decision or intervention taken by the agent based on its current state to influence the environment \cite{Sutton1998}. The action space $\mathcal{A}$  represents the complete set of all possible actions that the agent can choose from at any given decision point \cite{Sutton1998}. For example, in the  FrozenLake environment, the possible actions for the agent are \textit{up, down, left} and \textit{right} \cite{frozenlake}. Because this set of possible actions is countable, the action space for the FrozenLake is said to be \textit{discrete} \cite{frozenlake}. By contrast, in an \emph{advertisement recommendation} setting, the action space $\mathcal{A}$ might consist of all possible combinations of ads, their rankings, placements, and formats \cite{ie2019slateq}. The objective of this set of actions in ad recommendation is to deliver the right set of ads at the right time in order to maximize platform revenue, while maintaining or improving user engagement and satisfaction \cite{zhao2020jointly}. Although this action space is discrete and countable, the number of possible combinations grows exponentially with the number of candidate ads and available slots. As a result, it becomes computationally infeasible to enumerate or evaluate each action individually, and must instead be treated using methods designed for high-dimensional discrete spaces \cite{ie2019recsim}.
 
@@ -586,24 +584,7 @@ To mitigate risks and costs of online exploration, offline is almost always used
 
 RL algorithms can be divided into value-based and policy-based methods based on how they learn to make decisions to maximize cumulative rewards \cite{Sutton1998, russell2016artificial}. Value-based methods first estimate the value of states or state-action pairs and then derive a policy from these estimates, whereas policy-based methods learn the policy directly by optimizing expected cumulative reward \cite{Sutton1998, schulman2017proximal}. In other words, value-based methods focus on learning the utility of states or actions and derive the optimal behavior indirectly by acting greedily with respect to this learned value \cite{Sutton1998}. Policy-based methods, in contrast, directly optimize the policy without estimating value functions \cite{Sutton1998, schulman2017proximal}. 
 
-There are two common \textbf{value functions}. The first is the state value function, defined as
-    \begin{equation}
-        V^{\pi}(s) = \mathbb{E}_{\pi} \left[ \sum_{t=0}^{\infty} \gamma^t R_{t+1} \,\middle|\, S_0 = s \right]
-        \label{eq:v_function}
-    \end{equation}
-    which gives the expected return when starting in state $s$ and following policy $\pi$ thereafter. As in standard RL notation, \( R_{t+1} \) is the reward received at time step \( t+1 \), and \( \gamma \in [0, 1] \) is the discount factor that determines how much future rewards are valued relative to immediate ones. The lower the value of $\gamma$, the less future rewards influence the total return \cite{Sutton1998, russell2016artificial}. The second is the action value function, defined as
-    \begin{equation}
-        Q^{\pi}(s, a) = \mathbb{E}_{\pi} \left[ \sum_{t=0}^{\infty} \gamma^t R_{t+1} \,\middle|\, S_0 = s, A_0 = a \right]
-        \label{eq:q_function}
-    \end{equation}
-which gives the expected return when starting in state $s$, taking action $a$, and then following policy $\pi$ \cite{Sutton1998, russell2016artificial}. Once the action-value function \( Q(s, a) \) is learned,  the agent can act greedily with respect to its current value estimates by selecting the action that maximizes this function:
-
-\begin{equation}
-    \pi(s) = \arg\max_a Q(s, a)
-    \label{eq:greedy_policy}
-\end{equation}
-
-where \( \pi(s) \) denotes the policy derived from the current value function \cite{Sutton1998}. This approach allows the agent to act greedily with respect to its current value estimates, that is, to select the action that appears to yield the highest expected return at the next decision point, gradually improving its behavior as the value function becomes more accurate \cite{Sutton1998}. Because value-based methods rely on greedy action selection to determine the next best action, they require comparing the estimated value of all possible actions at each decision point (e.g. each state) \cite{Sutton1998, dulac2019challenges}. As the number of available actions grows, and as the agent encounters more states during interaction, this exhaustive comparison becomes computationally intractable \cite{dulac2019challenges}. For this reason, value-based methods are particularly well-suited for environments with discrete or low-dimensional action spaces, where enumerating and comparing action values remains computationally feasible \cite{dulac2019challenges, Sutton1998}. Common algorithms used in value-based learning include Q-learning, SARSA, and Deep Q-Networks (DQN) \cite{Sutton1998, mnih2015human}. 
+Because value-based methods rely on greedy action selection to determine the next best action, they require comparing the estimated value of all possible actions at each decision point (e.g. each state) \cite{Sutton1998, dulac2019challenges}. As the number of available actions grows, and as the agent encounters more states during interaction, this exhaustive comparison becomes computationally intractable \cite{dulac2019challenges}. For this reason, value-based methods are particularly well-suited for environments with discrete or low-dimensional action spaces, where enumerating and comparing action values remains computationally feasible \cite{dulac2019challenges, Sutton1998}. Common algorithms used in value-based learning include Q-learning, SARSA, and Deep Q-Networks (DQN) \cite{Sutton1998, mnih2015human}. 
 
 \textbf{In Policy-based learning}, the agent tries out different strategies and tweaks their behavior directly based on what works well overall, rather than scoring every possible move \cite{russell2016artificial, Sutton1998}. Formally, the goal is to learn a parameterized policy \( \pi_\theta(a \mid s) \), where \( \theta \) denotes the parameters of the policy \cite{Sutton1998, schulman2017proximal}. In practice, especially in modern industrial applications, these parameters are often the weights of a neural network, though other function approximators are possible \cite{Sutton1998, levine2020offline, mnih2016asynchronous}. Neural network-based policies have become the norm in large-scale recommendation systems due to their expressiveness and scalability, making them particularly well-suited for environments with complex and high-dimensional state spaces \cite{lin2023survey, chen2022off, gauci2018horizon}. Formally, the objective function to be maximized is the expected cumulative reward under the policy: 
 \begin{equation}
