Fix quotes: replace Unicode curly quotes and straight quotes with LaTeX ...'' style

--- a/paper.tex
+++ b/paper.tex
@@ -107,7 +107,7 @@ The paper begins with a historical overview of recommendation systems with monet
 
 To ensure broad coverage, relevant papers were collected from both academic and industry sources. Foundational academic works such as \textit{Reinforcement Learning: An Introduction} \cite{Sutton1998}, \textit{Statistical Methods for Recommender Systems} \cite{agarwal2016statistical}, and \textit{Artificial Intelligence: A Modern Approach} \cite{russell2016artificial} were used to establish key mathematical foundations, including Markov Decision Processes (MDPs), Contextual Bandits, Off-Policy Learning, and Offline Replay.
 
-To reflect the internal perspective of a production-facing ad policy team, a curated list of 10–15 papers referenced within Pinterest’s Ad Policy team was also compiled. Examples include \textit{Jointly Learning to Recommend and Advertise} \cite{zhao2020jointly}, \textit{DEAR: Deep Reinforcement Learning for Online Advertising Impressions in Recommender Systems} \cite{zhao2021dear}, \textit{Ad-load Balancing via Off-Policy Learning} \cite{sagtani2024ad}, and \textit{Practical Bandits} \cite{van2024practical}. In addition, targeted keyword searches such as “Reinforcement Learning ads [company name]” and “Contextual Bandit [company name]” were conducted for leading companies in the advertising and recommendation space (e.g., Google, Meta, Pinterest, Microsoft, TikTok, YouTube, LinkedIn),  surfacing additional papers describing real-world systems and methodologies. To complement those efforts, a separate search was conducted on Google Scholar for relevant review papers. While no surveys were found that specifically focused on RL in ad recommendation systems, related reviews on ``contextual bandits'', ``ad fatigue'', and ``recommender systems'' were used to identify additional references.
+To reflect the internal perspective of a production-facing ad policy team, a curated list of 10–15 papers referenced within Pinterest’s Ad Policy team was also compiled. Examples include \textit{Jointly Learning to Recommend and Advertise} \cite{zhao2020jointly}, \textit{DEAR: Deep Reinforcement Learning for Online Advertising Impressions in Recommender Systems} \cite{zhao2021dear}, \textit{Ad-load Balancing via Off-Policy Learning} \cite{sagtani2024ad}, and \textit{Practical Bandits} \cite{van2024practical}. In addition, targeted keyword searches such as ``Reinforcement Learning ads [company name]'' and ``Contextual Bandit [company name]'' were conducted for leading companies in the advertising and recommendation space (e.g., Google, Meta, Pinterest, Microsoft, TikTok, YouTube, LinkedIn),  surfacing additional papers describing real-world systems and methodologies. To complement those efforts, a separate search was conducted on Google Scholar for relevant review papers. While no surveys were found that specifically focused on RL in ad recommendation systems, related reviews on ``contextual bandits'', ``ad fatigue'', and ``recommender systems'' were used to identify additional references.
 
 Finally, manual crawling of citation networks in cornerstone papers was used to identify additional key contributions. For instance, tracing citations from \textit{Jointly Learning to Recommend and Advertise} \cite{zhao2020jointly}, \textit{DEAR} \cite{zhao2021dear}, and \textit{Offline Reinforcement Learning} \cite{levine2020offline} led to works such as \textit{Ads Allocation in Feed via Constrained Optimization} \cite{yan2020ads} and \textit{A Contextual Bandit Bake-off} \cite{bietti2021contextual}.
 In total, 153 papers were selected and reviewed. Papers were ranked according to three main criteria: influence, to capture the foundational or widely adopted ideas in the field; industry relevance, to ensure that the outcomes were sound, implementable, and actionable; and recency, to reflect the latest methodological developments and deployment practices.
@@ -189,7 +189,7 @@ Despite these successes, traditional tabular models struggled to capture nuanced
 
 \textbf{Multi-Armed Bandits (MABs)} emerged as a powerful method for online advertising around the 2010s to tackle the explore–exploit tradeoff, which consists of finding the optimal balance between choosing new ad policies with unknown performance and showing older ad policies with known positive performance \cite{schwartz2017customer, burtini2015improving}. MABs are a class of algorithms for dynamic decision-making under uncertainty, originally developed in mid-20th-century probability theory \cite{robbins1952sequential}. While MABs had been widely applied in areas such as clinical trials \cite{villar2015multi, thompson1933likelihood}, they were adopted in large-scale web and advertising platforms during the early 2010s \cite{li2010contextual,chapelle2011empirical, schwartz2017customer}.  
 
-MABs allow platforms to reduce unnecessary exposure to a suboptimal treatment by continuously updating the estimates of expected reward and uncertainty of which treatment is most likely to yield the highest reward \cite{kuleshov2014algorithms}. In the context of online advertising, “treatments” are typically specific ad configurations, defined by parameters such as displacement cost, reserve price, ad load, and ad placement. “Rewards” typically represent user engagement metrics such as clicks or conversions \cite{schwartz2017customer}.
+MABs allow platforms to reduce unnecessary exposure to a suboptimal treatment by continuously updating the estimates of expected reward and uncertainty of which treatment is most likely to yield the highest reward \cite{kuleshov2014algorithms}. In the context of online advertising, ``treatments'' are typically specific ad configurations, defined by parameters such as displacement cost, reserve price, ad load, and ad placement. ``Rewards'' typically represent user engagement metrics such as clicks or conversions \cite{schwartz2017customer}.
 
 In contrast to traditional A/B tests, where there are randomized treatments assigned for a predetermined amount of time, MABs dynamically learn which configuration yields the highest reward for each user at a particular time. Although this adaptive learning framework manages the trade-off between minimizing regret from suboptimal treatments and exploring potentially superior configurations, defining the precise reward function to optimize remains an open challenge  \cite{wen2019learning}.
 
@@ -209,12 +209,12 @@ The ability to train deep models efficiently at scale has unlocked previously im
 Selecting the right heads in Multi-Task Attention Models and determining their optimal weighting is not a deterministic process \cite{Michel2019, Voita2019}. It typically requires iterative experimentation, involving both offline analysis (e.g., hyperparameter tuning, head ablation studies) and online testing (A/B experiments) \cite{Michel2019, kang2018sasrec}. This process is particularly challenging for new users and new content, where slow adaptation can result in suboptimal personalization and early churn \cite{Schein2002, Bobadilla2013}. 
 
 %tie this up to Offline Replay 
-To address difficulties related to policy optimization, like weight tuning and head selection,  \textit{Offline Replay} is often employed to find optimal policies in large parameter search spaces  \cite{agarwal2016statistical, levine2020offline, agarwal2020optimistic}. This technique typically begins with data collection via A/B/n experiments, where different policies are randomly assigned to users \cite{agarwal2019online, chen2009large}. Afterward, Offline Replay simulates the effects of various ad policies across different user segments and estimates the potential rewards based on logged interactions \cite{agarwal2016statistical}. In this context, “reward” refers to the performance metric we aim to maximize (i.e. clicks, likes, shares, revenue) \cite{wu2017returning}. However, in many cases, the true optimal treatment is not explicitly tested \cite{agarwal2019online}. Here, importance sampling corrects for differences between the observed behavior policy and the target policy, improving estimation accuracy \cite{Sutton1998, dudik2011doubly}.  Based on the collected data on random assignments between policies and users typically involved in Offline Replay, one can use different policy learning methods to map the optimal policies from user ids, content types, and other contextual signals for the optimal weights at any point in time \cite{swaminathan2015counterfactual}. 
+To address difficulties related to policy optimization, like weight tuning and head selection,  \textit{Offline Replay} is often employed to find optimal policies in large parameter search spaces  \cite{agarwal2016statistical, levine2020offline, agarwal2020optimistic}. This technique typically begins with data collection via A/B/n experiments, where different policies are randomly assigned to users \cite{agarwal2019online, chen2009large}. Afterward, Offline Replay simulates the effects of various ad policies across different user segments and estimates the potential rewards based on logged interactions \cite{agarwal2016statistical}. In this context, ``reward'' refers to the performance metric we aim to maximize (i.e. clicks, likes, shares, revenue) \cite{wu2017returning}. However, in many cases, the true optimal treatment is not explicitly tested \cite{agarwal2019online}. Here, importance sampling corrects for differences between the observed behavior policy and the target policy, improving estimation accuracy \cite{Sutton1998, dudik2011doubly}.  Based on the collected data on random assignments between policies and users typically involved in Offline Replay, one can use different policy learning methods to map the optimal policies from user ids, content types, and other contextual signals for the optimal weights at any point in time \cite{swaminathan2015counterfactual}. 
 
 
 %  As a form of counterfactual learning, it estimates potential rewards under different policies by simulating outcomes based on logged interactions. This enables the system to learn from sparse or delayed feedback and serves as a critical tool for safely testing new policies offline \cite{sagtani2024ad}.\\
 
-% In this context, “reward” refers to the performance metric we aim to maximize. For example, a click or any other positive action on an item is considered a reward. Sometimes, a positive action like a click can be weighted by a downstream utility, such as advertising revenue or time spent on a landing page (the page displayed after a user clicks on a recommended item), to derive a weighted reward. Our goal is to estimate the expected reward of a new ad policy using data collected in the past \cite{agarwal2016statistical}.\\
+% In this context, ``reward'' refers to the performance metric we aim to maximize. For example, a click or any other positive action on an item is considered a reward. Sometimes, a positive action like a click can be weighted by a downstream utility, such as advertising revenue or time spent on a landing page (the page displayed after a user clicks on a recommended item), to derive a weighted reward. Our goal is to estimate the expected reward of a new ad policy using data collected in the past \cite{agarwal2016statistical}.\\
 
 Offline replay often assumes that user preferences and item availability do not change significantly during data collection. However, in real ad systems, these factors can shift, causing offline data to become stale or biased \cite{levine2020offline, agarwal2014taming}. Contextual bandits address this limitation by leveraging continuous feedback from live user interactions, preventing the policy from being locked into a static offline dataset \cite{li2010contextual}. Contextual bandits can be thought of as a special case of RL, where an action selection does not influence future states \cite{bubeck2012regret, Sutton1998}. Unlike full RL, which models long-term state transitions, contextual bandits assume that each decision is independent, optimizing for immediate rewards rather than a multi-step trajectory \cite{bubeck2012regret, Sutton1998}. This makes them particularly well-suited for recommender systems, where ranking decisions can be treated as independent events \cite{afsar2022reinforcement, zhou2016latent}. Additionally, contextual bandits naturally balance exploration and exploitation, allowing them to adapt dynamically to user behavior in real time \cite{li2010contextual}. However, a practical limitation of contextual bandits is that they select actions from a fixed set defined at deployment time, such as preconfigured ad policies or treatment arms \cite{bietti2021contextual}. As a result, the policy’s performance is inherently constrained by the quality and granularity of the available states and actions at the time of inference \cite{dimitrakakis2018decision}.
 
@@ -356,7 +356,7 @@ A \textbf{canonical utility function} at the policy layer to \textit{blend} ads 
     \begin{equation}
         U(x) = \alpha \times \text{Revenue} + \beta \times \text{Engagement} - \gamma \times \text{Ad Fatigue}
     \end{equation}
-    where $\alpha$, $\beta$, and $\gamma$ are weights that determine the relative importance of each factor. To compute the utilities of "Revenue", "Engagement", and "Ad Fatigue", typically many signals feed into each component. These signals include, but are not limited to, the ones shown in Table \ref{tab:proxy-metrics}. In a bandit or RL context, $U(x)$ serves as the reward signal guiding policy updates. The process of tuning the weights of $\alpha$, $\beta$, and $\gamma$ is often done through experimentation, as the right balance between engagement and revenue can shift depending on the context. For instance, ByteDance uses a multi-objective reward framework in their recommendation systems, where different reward functions are designed for organic content and ads, combining them to guide the overall recommendation strategy \cite{zhao2020jointly}.
+    where $\alpha$, $\beta$, and $\gamma$ are weights that determine the relative importance of each factor. To compute the utilities of ``Revenue'', ``Engagement'', and ``Ad Fatigue'', typically many signals feed into each component. These signals include, but are not limited to, the ones shown in Table \ref{tab:proxy-metrics}. In a bandit or RL context, $U(x)$ serves as the reward signal guiding policy updates. The process of tuning the weights of $\alpha$, $\beta$, and $\gamma$ is often done through experimentation, as the right balance between engagement and revenue can shift depending on the context. For instance, ByteDance uses a multi-objective reward framework in their recommendation systems, where different reward functions are designed for organic content and ads, combining them to guide the overall recommendation strategy \cite{zhao2020jointly}.
     
 In some cases, a very simple unified function can suffice over a complex utility function. Researchers at Alibaba introduced the concept of Click Yield, which is defined as the ratio of the total number of clicks on all items (ads + organic results) to the total number of impressions on a page \cite{zhang2018whole}. Click Yield provides a holistic evaluation of page performance, accounting for the interactive effects between ads and organic content, and helping to mitigate the bias that arises from examining CTR in isolation. Their optimization task maximizes total revenue while ensuring that the Click Yield does not fall below a certain threshold (T)  \cite{zhang2018whole}. A comparison of utility function formulations is shown in Table \ref{tab:utility-comparison}.
 
@@ -509,7 +509,7 @@ In RL, an \textbf{action} $a \in \mathcal{A}$ refers to a decision or interventi
 
 An ideal action space should be \textit{expressive} enough to capture all relevant degrees of freedom the agent needs to optimize its behavior, but it should avoid unnecessary complexity \cite{zhu2024discretizing, liu2025reducing}. The action space described above in the FrozenLake example satisfies these criteria, as the four cardinal movements (\textit{up, down, left,} and \textit{right}) are enough to navigate to any state in the grid while remaining \textbf{orthogonal}, thus providing both sufficient coverage and simplicity \cite{frozenlake}.  In contrast, the ad recommendation action space is inherently high-dimensional and entangled \cite{ie2019recsim}. The agent must decide \emph{what} to show (a discrete choice over candidate ads), \emph{where} to place it  (which may be modeled as a discrete slot or a continuous position), and in \emph{what order} (often determined by continuous relevance scores), often under tight latency constraints and user personalization requirements \cite{zhao2020jointly}. The action space in ad recommendation systems must be expressive enough to encompass all relevant choices for optimal ad delivery while ensuring no combinatorial explosion in complexity \cite{ie2019slateq}. Moreover, ensuring that each dimension remains sufficiently \emph{orthogonal} can be nontrivial, given potential interactions between ad content, positioning, and user context \cite{ie2019reinforcement}. If the action space is too coarse, the system risks underfitting, serving generic policies that fail to personalize effectively or miss monetization opportunities \cite{ie2019slateq}. On the other hand, if it is too fine, the system may overfit to noise, struggle to generalize, or incur prohibitive computational costs \cite{ie2019slateq}. Practical systems often resort to action abstraction or parameterization (e.g., slate-based policies, ad load knobs, or policy buckets) to reduce complexity at the cost of optimality \cite{ie2019reinforcement, hohnhold2015focusing, sagtani2024ad}.
 
-The independence of these action dimensions facilitates more modular policy learning \cite{tavakoli2018action, sharma2017learning}. By allowing a degree of independence for each action dimension, the agent achieves modular policy learning that scales linearly (instead of exponentially) with the number of action degrees-of-freedom \cite{tavakoli2018action}. In addition, actions should ideally correspond to semantically meaningful choices to facilitate policy interpretability and validation \cite{glanois2024survey, puiutta2020explainable}. In the case of the FrozenLake problem, the action space is intuitive and human-interpretable, making it straightforward to validate learned policies \cite{brockman2016openai, Sutton1998}. For instance, an RL practitioner can manually inspect and reason about the learned policy (e.g. "the agent plans to move \textit{down} then \textit{right} to reach the goal") to verify that each action choice aligns with domain logic \cite{brockman2016openai}. While the action space in ad recommendation systems is far more complex, structuring it around semantically meaningful levers (e.g., “increase ad load for high-intent users” or “downrank low-quality creatives”) enables engineers and product teams to reason about the system’s behavior \cite{glanois2024survey, dulac2021challenges}. If a learned policy increases ad load for a particular user segment, analysts can trace this decision back to upstream signals, such as historical engagement patterns or commercial intent scores \cite{gauci2018horizon, dulac2021challenges}. Policies composed of interpretable levers enable more transparent debugging, offline validation, and policy review, which is crucial for ensuring that the deployed strategy aligns with business intuition, avoids learning spurious correlations, and mitigates the risk of unintended outcomes \cite{dulac2021challenges, verma2018programmatically, puiutta2020explainable, glanois2024survey}.
+The independence of these action dimensions facilitates more modular policy learning \cite{tavakoli2018action, sharma2017learning}. By allowing a degree of independence for each action dimension, the agent achieves modular policy learning that scales linearly (instead of exponentially) with the number of action degrees-of-freedom \cite{tavakoli2018action}. In addition, actions should ideally correspond to semantically meaningful choices to facilitate policy interpretability and validation \cite{glanois2024survey, puiutta2020explainable}. In the case of the FrozenLake problem, the action space is intuitive and human-interpretable, making it straightforward to validate learned policies \cite{brockman2016openai, Sutton1998}. For instance, an RL practitioner can manually inspect and reason about the learned policy (e.g. ``the agent plans to move \textit{down} then \textit{right} to reach the goal'') to verify that each action choice aligns with domain logic \cite{brockman2016openai}. While the action space in ad recommendation systems is far more complex, structuring it around semantically meaningful levers (e.g., ``increase ad load for high-intent users'' or ``downrank low-quality creatives'') enables engineers and product teams to reason about the system’s behavior \cite{glanois2024survey, dulac2021challenges}. If a learned policy increases ad load for a particular user segment, analysts can trace this decision back to upstream signals, such as historical engagement patterns or commercial intent scores \cite{gauci2018horizon, dulac2021challenges}. Policies composed of interpretable levers enable more transparent debugging, offline validation, and policy review, which is crucial for ensuring that the deployed strategy aligns with business intuition, avoids learning spurious correlations, and mitigates the risk of unintended outcomes \cite{dulac2021challenges, verma2018programmatically, puiutta2020explainable, glanois2024survey}.
 
 Moreover, an action space should be consistent across episodes \cite{puterman2014markov}. That is, taking the same action in the same state should yield statistically predictable outcomes \cite{puterman2014markov}. The state space in the FrozenLake is stochastic \cite{frozenlake}, meaning that taking the same action does not always result in the same next state. For example, selecting the action "move right" might result in the agent moving right, up, or down, as governed by the transition probabilities defined by $P(s' \mid s, a)$ \cite{frozenlake}. Despite the stochasticity in the environment, the outcomes observed should converge to the expected values described by the transition probability distribution over a sufficiently large number of episodes \cite{puterman2014markov}. A similar principle applies in ad recommendation. Although user behavior and auction dynamics introduce stochasticity, taking the same ad-serving action, such as presenting a specific slate of ads to a user with a given context, should yield statistically predictable engagement or monetization outcomes. That is, over many episodes, the distribution of observed rewards (e.g., clicks, conversions, revenue) should converge to the expected value associated with the given state-action pair \cite{mcmahan2013ad, zhao2018deep}. This consistency is foundational for policy learning, as it ensures that repeated exposure to similar decision contexts enables accurate estimation of long-term value, despite noisy observations \cite{Sutton1998}. 
 
