Fix Table 4: wrap in adjustbox to constrain to linewidth

--- a/paper.tex
+++ b/paper.tex
@@ -682,6 +682,7 @@ While the previous discussion focused on canonical exploration strategies that a
     \centering
     \renewcommand{\arraystretch}{1.05}
     \footnotesize
+    \begin{adjustbox}{max width=\linewidth}
     \begin{tabular}{|>{\raggedright\arraybackslash}p{1.3cm}|>{\raggedright\arraybackslash}p{3.2cm}|>{\raggedright\arraybackslash}p{3.2cm}|>{\raggedright\arraybackslash}p{2.7cm}|>{\raggedright\arraybackslash}p{2.7cm}|}
         \hline
         \textbf{Method} & \textbf{How It Works} & \textbf{Pros} & \textbf{Cons} & \textbf{Best Use Cases} \\ 
@@ -796,6 +797,7 @@ While the previous discussion focused on canonical exploration strategies that a
         \end{minipage} \\ 
         \hline
     \end{tabular}
+    \end{adjustbox}
     \caption{Comparison of Exploration-Exploitation Methods in Ad Policy Optimization}
     \label{tab:exploration-exploitation-comparison}
 \end{table*}
